fixed layout issues and changed colors for shadcn sidebar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,7 +64,7 @@
     --chart-3: 216 92% 60%;
     --chart-4: 210 98% 78%;
     --chart-5: 212 97% 87%;
-    --sidebar-background: 240 5.9% 10%;
+    --sidebar-background: 188 10% 4%;
     --sidebar-foreground: 240 4.8% 95.9%;
     --sidebar-primary: 224.3 76.3% 48%;
     --sidebar-primary-foreground: 0 0% 100%;
